--- a/lib/lib-storage/package.json
+++ b/lib/lib-storage/package.json
@@ -18,10 +18,10 @@
     "test:watch": "yarn g:vitest watch",
     "test:integration": "yarn g:vitest run -c vitest.config.integ.mts",
     "test:integration:watch": "yarn g:vitest watch -c vitest.config.integ.mts",
-    "test:e2e": "yarn g:vitest run -c vitest.config.e2e.mts --mode development",
-    "test:e2e:watch": "yarn g:vitest watch -c vitest.config.e2e.mts",
     "test:browser": "yarn g:vitest run -c vitest.config.browser.ts",
-    "test:browser:watch": "yarn g:vitest watch -c vitest.config.browser.ts"
+    "test:browser:watch": "yarn g:vitest watch -c vitest.config.browser.ts",
+    "test:e2e": "yarn g:vitest run -c vitest.config.e2e.ts --mode development",
+    "test:e2e:watch": "yarn g:vitest watch -c vitest.config.e2e.ts"
   },
   "engines": {
     "node": ">=18.0.0"
