--- a/.prettierignore
+++ b/.prettierignore
@@ -3,8 +3,8 @@ CHANGELOG.md
 .github/*
 **/*.hbs
 **/*/report.md
-clients/*/src/endpoint/ruleset.ts
-clients/**/*.*
-private/**/*.*
+clients/**/src
+clients/**/README.md
+private/**
 packages/nested-clients/src/submodules/*/endpoint/ruleset.ts
 **/*.java
