--- a/packages-internal/endpoint-cache/package.json
+++ b/packages-internal/endpoint-cache/package.json
@@ -46,10 +46,10 @@
   "files": [
     "dist-*/**"
   ],
-  "homepage": "https://github.com/aws/aws-sdk-js-v3/tree/main/packages/endpoint-cache",
+  "homepage": "https://github.com/aws/aws-sdk-js-v3/tree/main/packages-internal/endpoint-cache",
   "repository": {
     "type": "git",
     "url": "https://github.com/aws/aws-sdk-js-v3.git",
-    "directory": "packages/endpoint-cache"
+    "directory": "packages-internal/endpoint-cache"
   }
 }
