--- a/packages-internal/xml-builder/package.json
+++ b/packages-internal/xml-builder/package.json
@@ -47,11 +47,11 @@
     "./dist-es/xml-parser": "./dist-es/xml-parser",
     "./dist-cjs/xml-parser": "./dist-cjs/xml-parser"
   },
-  "homepage": "https://github.com/aws/aws-sdk-js-v3/tree/main/packages/xml-builder",
+  "homepage": "https://github.com/aws/aws-sdk-js-v3/tree/main/packages-internal/xml-builder",
   "repository": {
     "type": "git",
     "url": "https://github.com/aws/aws-sdk-js-v3.git",
-    "directory": "packages/xml-builder"
+    "directory": "packages-internal/xml-builder"
   },
   "devDependencies": {
     "@tsconfig/recommended": "1.0.1",
