--- a/.github/workflows/codegen-ci.yml
+++ b/.github/workflows/codegen-ci.yml
@@ -55,30 +55,47 @@ jobs:
 
       - name: Clean previous client generation
         run: |
-          rm -rf codegen/new-client-test-codegen/build/smithyprojections
+          rm -rf codegen/new-client-test-codegen/build
+          rm -rf clients/client-test-weather
 
       - name: Generate new client from test model
         run: |
           cd codegen
           ./gradlew :new-client-test-codegen:build
 
+      - name: Copy generated client to clients folder
+        run: |
+          mkdir -p clients/client-test-weather
+          cp -r codegen/new-client-test-codegen/build/smithyprojections/new-client-test-codegen/source/typescript-client-codegen/* clients/client-test-weather/
+
+      - name: Install workspace dependencies
+        run: |
+          yarn install --no-immutable
+
+      - name: Build required packages
+        run: |
+          node ./scripts/turbo build -F=./packages-internal/*
+
       - name: Verify client was generated
         run: |
-          if [ ! -d "codegen/new-client-test-codegen/build/smithyprojections/new-client-test-codegen/source/typescript-client-codegen" ]; then
+          if [ ! -f "clients/client-test-weather/package.json" ]; then
             echo "ERROR: Client was not generated"
             exit 1
           fi
           echo "Client generated successfully"
 
-      - name: Install dependencies and build client
+      - name: Build client
         run: |
-          cd codegen/new-client-test-codegen/build/smithyprojections/new-client-test-codegen/source/typescript-client-codegen
-          touch yarn.lock
-          yarn install --no-immutable
+          cd clients/client-test-weather
           yarn build
 
-      - name: Run validation checks on generated client
+      - name: Commit generated client (triggers hooks)
         run: |
-          cd codegen/new-client-test-codegen/build/smithyprojections/new-client-test-codegen/source/typescript-client-codegen
-          node ../../../../../../../scripts/runtime-dependency-version-check/runtime-dep-version-check.js
-          node ../../../../../../../scripts/runtime-dependency-version-check/check-dependencies.js
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git add clients/client-test-weather
+          git commit -m "client(client-test-weather): testing the generated client in ci" 
+
+      - name: Run integration tests
+        run: |
+          yarn test:integration
